<resources>
    <string name="app_name">Chinese Astrology Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="action_calculate_bday">Calculate Birthday</string>
    <string name="action_show_monthly_flying_stars">Show Monthly Flying Stars</string>
    <string name="action_show_yearly_flying_stars">Show Yearly Flying Stars</string>
    <string name="action_determine_current_position">Determine Current Position</string>

    <string name="btn_action_Calculate">Calculate</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="enter_birthdate">Enter the birthdate:</string>
    <string name="enter_date">Enter the date:</string>
    <string name="animal_sign_label">Animal Sign:</string>
    <string name="element_sign_label">Element:</string>

    <string name="enter_year">Enter year</string>
    <string name="enter_month_year">Enter month/month</string>
    <string name="up_to">up to</string>

    <string name="compass_direction_south_east">SE</string>
    <string name="compass_direction_south">S</string>
    <string name="compass_direction_south_west">SW</string>
    <string name="compass_direction_west">W</string>
    <string name="compass_direction_north_west">NW</string>
    <string name="compass_direction_north">N</string>
    <string name="compass_direction_north_east">NE</string>
    <string name="compass_direction_east">E</string>
</resources>
