<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexis.chineseastrology.MainActivity">
    <item
        android:id="@+id/action_calcuate_bday"
        android:orderInCategory="100"

        android:title="@string/action_calculate_bday" />
    <item
        android:id="@+id/action_show_monthly_flying_stars"
        android:orderInCategory="100"
        android:title="@string/action_show_monthly_flying_stars" />
    <item
        android:id="@+id/action_show_yearly_flying_stars"
        android:orderInCategory="100"
        android:title="@string/action_show_yearly_flying_stars" />
    <item
        android:id="@+id/action_determine_current_position"
        android:orderInCategory="100"
        android:title="@string/action_determine_current_position" />
</menu>
